--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService":"http://localhost:7000/api/c/Platforms"
+  "CommandService":"http://localhost:7000/api/c/Platforms",
+  "ConnectionStrings": {
+    "PlatformsConn":"Server:mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=Kosongkan@Saja"
+  }
 }
