--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService":"http://localhost:7000/api/c/Platforms",
-  "ConnectionStrings": {
-    "PlatformsConn":"Server:mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=Kosongkan@Saja"
-  }
+  "CommandService":"http://localhost:7000/api/c/Platforms"
 }
