--- a/PlatformService/PlatformService.csproj
+++ b/PlatformService/PlatformService.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.4"/>
   </ItemGroup>
 </Project>
