--- a/CommandsService/CommandsService.csproj
+++ b/CommandsService/CommandsService.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.4"/>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.4"/>
   </ItemGroup>
 </Project>
